# DIKWP_VITA_MESH_OS_v1.0_CN

./: CITATION.cff  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PRIVACY.md  QUICKSTART_CN.md  README.md  README_CN.md  RELEASE_NOTES_v1.0_CN.md  SECURITY.md  SHA256SUMS.txt  VALIDATION_REPORT.json  a11y_report.json  docker-compose.yml  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
config/: duan_seed_profile.json  vitality_weights.json
deployment/: DEPLOYMENT_RUNBOOK_CN.md  MINIMAL_ACCESS_ADAPTER_CN.md  nginx.conf
docs/: 段玉聪_DIKWP-VITA_MESH_OS_个性化开源数字生命与分布式生命力增强系统_v1.0_CN_最终版.docx
examples/: sample_pulse.json
governance/: PURPOSE_CONSTITUTION_CN.md
outputs/demo/: demo_vitality.db  evolution_proposals.json  federation_bundle.json  vitality_state.json
prototype/: index.html  sw.js
public/: vitality.json
schemas/: evolution_proposal.schema.json  federation_bundle.schema.json  node_manifest.schema.json  pulse_packet.schema.json  vitality_state.schema.json
scripts/: import_pulses.py  publish_state.py
src/dikwp_vita/: __init__.py  cli.py  collector.py  crypto.py  demo.py  engine.py  github_ingest.py  ledger.py  minimal_access.py  models.py  runproof.py
tests/: test_api.py  test_crypto_federation.py  test_github_ingest.py  test_ledger_engine.py  test_minimal_access.py  test_models.py  test_runproof.py
