[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dikwp-vita-mesh"
version = "1.0.0"
description = "Privacy-preserving distributed vitality infrastructure for a DIKWP research digital life."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "DIKWP-VITA Mesh contributors"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "cryptography>=42"
]

[project.scripts]
dikwp-vita = "dikwp_vita.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
